// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should hide label if \`showInputLabel\` set to false 1`] = `
.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #DADDE2;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #1B2029;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F8F6FF;
  border-color: #7D58FF;
}

.emotion-1:focus svg,
.emotion-1:focus-within svg {
  fill: #7D58FF;
}

.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: none !important;
}

<div>
  <label
    className="emotion-0"
  >
    I'm not displayed
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances focus 1`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #DADDE2;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #1B2029;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F8F6FF;
  border-color: #7D58FF;
}

.emotion-1:focus svg,
.emotion-1:focus-within svg {
  fill: #7D58FF;
}

<div>
  <label
    className="emotion-0"
  />
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances focus 2`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #EB293A;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #EB293A;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #FDF4F4;
}

<div>
  <label
    className="emotion-0"
  />
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances focus 3`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #14C684;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #14C684;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F3FCF8;
}

<div>
  <label
    className="emotion-0"
  />
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances with props 1`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #DADDE2;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #1B2029;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F8F6FF;
  border-color: #7D58FF;
}

.emotion-1:focus svg,
.emotion-1:focus-within svg {
  fill: #7D58FF;
}

<div>
  <label
    className="emotion-0"
    htmlFor="test.input.standard"
  >
    standard
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      id="test.input.standard"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances with props 2`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #EB293A;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #EB293A;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #FDF4F4;
}

<div>
  <label
    className="emotion-0"
    htmlFor="test.input.error"
  >
    error
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      id="test.input.error"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render all appearances with props 3`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #14C684;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #14C684;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F3FCF8;
}

<div>
  <label
    className="emotion-0"
    htmlFor="test.input.success"
  >
    success
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      id="test.input.success"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render node as inputLabel 1`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #DADDE2;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #1B2029;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F8F6FF;
  border-color: #7D58FF;
}

.emotion-1:focus svg,
.emotion-1:focus-within svg {
  fill: #7D58FF;
}

<div>
  <label
    className="emotion-0"
  >
    <span>
      My Test Node
    </span>
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInput should render string inputLabel 1`] = `
.emotion-0 {
  padding-top: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 4px !important;
  font-weight: 500;
  display: block !important;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  box-sizing: border-box;
  padding-left: 16px;
  padding-left: 16px !important;
  padding-right: 16px !important;
  border: 1px solid;
  border-radius: 4px;
  height: 36px;
  background-color: #fff;
  border-color: #DADDE2;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:first-child {
  padding-left: 0;
}

.emotion-1 svg {
  fill: #1B2029;
}

.emotion-1:focus,
.emotion-1:focus-within {
  background-color: #F8F6FF;
  border-color: #7D58FF;
}

.emotion-1:focus svg,
.emotion-1:focus-within svg {
  fill: #7D58FF;
}

<div>
  <label
    className="emotion-0"
  >
    Test Input
  </label>
  <span
    className="emotion-2"
  >
    <input
      className="emotion-1"
      type="text"
    />
  </span>
</div>
`;
